# cookiecutter-data-science-proinsias

./: .gitignore  .mise.toml  .pre-commit-config.yaml  Makefile  README.md  ccds-help.json  ccds.json  pyproject.toml  todos.md
.github/: mergify.yml
ccds/hook_utils/: dependencies.py
docs/docs/: index.md
hooks/: post_gen_project.py
tests/: test_creation.py  virtualenv_harness.sh
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/mkdocs/: README.md
{{ cookiecutter.repo_name }}/projects/ds-utils/: README.md  pyproject.toml
{{ cookiecutter.repo_name }}/projects/ds-utils/ds_utils/: db_utils.py
{{ cookiecutter.repo_name }}/projects/ds-utils/tests/ds_utils/: test_db_utils.py
{{ cookiecutter.repo_name }}/projects/project-1/: README.md  env.yaml  pipeline.yaml  pyproject.toml
{{ cookiecutter.repo_name }}/projects/project-1/data/: .gitignore
{{ cookiecutter.repo_name }}/projects/project-1/notebooks/: 1.0-ftod-example.py  2.0-ftod-quarto.py  template.py
{{ cookiecutter.repo_name }}/projects/project-1/project_1/: __init__.py  clients.py  dataset.py  features.py  plots.py  task.py
{{ cookiecutter.repo_name }}/projects/project-1/project_1/modeling/: predict.py  train.py
{{ cookiecutter.repo_name }}/projects/project-1/tests/project_1/: test_config.py
