[project]
name = "cookiecutter-data-science-proinsias"
version = "2.3.0"
description = "A customized, logical, reasonably standardized but flexible project structure for doing and sharing data science work."
authors = [
  { name = "DrivenData", email = "info@drivendata.org" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
  "click",
  "cookiecutter",
  "tomlkit",
]

[dependency-groups]
dev = [
    "cookiecutter-data-science-proinsias",
    "ansi2html",
    "black",
    "build",
    "chardet",
    "isort",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "pexpect",
    "pipenv",
    "pytest",
    "termynal",
    "twine",
    "uv",
]

[tool.pytest.ini_options]
testpaths = "./tests"
addopts = "-vv --color=yes"

[tool.uv.sources]
cookiecutter-data-science-proinsias = { workspace = true }
