[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == 'MIT' %}"License :: OSI Approved :: MIT License"{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}"License :: OSI Approved :: BSD License"{% endif %}
]
requires-python = "~={{ cookiecutter.python_version_number }}"
include = ["LICENSE"]

[dependency-groups]
dev = [
    "absolufy-imports",
    "add-trailing-comma",
    "auto-walrus",
    "darglint",
    "deptry>=0.22.0",
    "flynt",
    "gitlint",
    "mkdocs-material>=8.5.10",
    "mkdocs>=1.4.2",
    "mkdocstrings[python]>=0.26.1",
    "mypy>=0.991",
    "poethepoet",
    "pre-commit>=2.20.0",
    "pycln",
    "pytest-black",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.2",
    "pytest-profiling",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=7.2.0",
    "refurb",
    "ruff>=0.9.2",
    "sqlfluff",
    "texthooks",
    "tox-uv>=1.11.3",
    "vulture",
]

[tool.bandit]
# exclude_dirs = [".venv", "shared"]

[tool.bandit.assert_used]
# skips = ['*_test.py', '*test_*.py', '*unittest.py']

[tool.darglint]
docstring_style = 'google'  # Default. Alternatives are 'sphinx' and 'numpy'.
strictness = 'full'  # Default. Alternatives are 'short' and 'long'.

[tool.docformatter]
recursive = true
wrap-descriptions = 120
wrap-summaries = 120

[tool.mypy]
python_version = "{{ cookiecutter.python_version_number }}"

check_untyped_defs = True
disallow_any_decorated = False
disallow_any_explicit = False
; disallow_any_expr = True
disallow_any_generics = True
disallow_any_unimported = False
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
; disallow_untyped_decorators = True
disallow_untyped_defs = True
ignore_missing_imports = True
no_implicit_optional = True
; pretty = True
; show_column_numbers = True
; show_error_codes = True
; show_error_context = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

; linecoverage_report = coverage_mypy-json
; linecount_report = coverage_mypy-txt
html_report = releases/tests/mypy_html
; any_exprs_report = coverage_mypy_any-txt


{% if cookiecutter.linting_and_formatting == 'ruff' %}
[tool.ruff]
line-length = 99
src = ["{{ cookiecutter.module_name }}"]
include = ["pyproject.toml", "{{ cookiecutter.module_name }}/**/*.py"]
builtins = ["_"]

# Avoiding flagging (and removing) `V101` from any `# noqa`
# directives, despite Ruff's lack of support for `vulture`.
external = ["V101"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.module_name }}"]
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 88  # Black.

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

{% endif %}

{% if cookiecutter.linting_and_formatting == 'flake8+black+isort' %}
[tool.black]
line-length = 99
src = ["{{ cookiecutter.module_name }}"]

[tool.isort]
profile = "black"
known_first_party = ["{{ cookiecutter.module_name }}"]
force_sort_within_sections = true
{% endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add command line options to pytest.
# doctest-modules: run doctests from docstrings in all python modules.
# durations: print duration of slowest tests.
# n auto: Use all CPUs for parallel processing.
# profile: generate code profile via pytest_profiling plugin.
# verbose: increase verbosity.
addopts = --doctest-modules --durations=0 --durations-min=1.0 -n auto --profile --verbose
# Enable log display during test run.
log_cli = true
# testpaths = []


[tool.sqlfluff.core]
# dialect = "mysql"

[tool.sqlfluff.rules]
comma_style = "leading"
# tab_space_size = 2

[tool.sqlfluff:rules.L010]
# capitalisation_policy = lower

[tool.sqlfluff.rules.L052]
# Semi-colon formatting approach
multiline_newline = true
require_final_semicolon = true
