[project]
name = "Project 1"
version = "0.1.0"
description = "Project 1."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
]

[build-system]
# Needed to ensure uv sync will auto-add the project as editable dependency.
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "project-1",
    "ipykernel>=6.29.5",
    "ipyparallel>=9.0.0",
    "ipython>=8.32.0",
    "jupyter-nbextensions-configurator>=0.6.4",
    "jupyterlab>=4.3.5",
    "jupytext>=1.16.7",
    "nbdime>=4.0.2",
    "pandas-stubs>=2.2.3.241126",
    "ydata-profiling>=4.12.2",
]

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.setuptools]
packages = ["project_1"]

[tool.uv.sources]
project-1 = { workspace = true }
