[project]
name = "project-1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Francis T. O'Donovan", email = "proinsias@users.noreply.github.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.10.0"
dependencies = [
    "ds-utils",
    "loguru",
    "python-dotenv",
    "tqdm",
    "typer",
]

[build-system]
# Needed to ensure uv sync will auto-add the project as editable dependency.
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "absolufy-imports",
    "add-trailing-comma",
    "auto-walrus",
    "darglint",
    "deptry>=0.22.0",
    "flynt",
    "gitlint",
    "ipyparallel",
    "ipython",
    "jupyterlab",
    "jupyterlab-quarto",
    "jupyter_nbextensions_configurator",
    "jupytext",
    "markupsafe",
    "matplotlib",
    "mkdocs-material>=8.5.10",
    "mkdocs>=1.4.2",
    "mkdocstrings[python]>=0.26.1",
    "mypy>=0.991",
    "nbdime",
    "nest_asyncio",
    "numpy",
    "pandas",
    "ploomber",
    "poethepoet",
    "pqdm",
    "pre-commit>=2.20.0",
    "project-1",
    "pycln",
    "pytest-black",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.2",
    "pytest-profiling",
    "pytest-sugar",
    "pytest-xdist",
    "pytest>=7.2.0",
    "refurb",
    "ruff>=0.9.2",
    "scikit-learn",
    "seaborn",
    "sqlfluff",
    "texthooks",
    "tox-uv>=1.11.3",
    "vulture",
    "ydata_profiling",
]

[tool.bandit]
# exclude_dirs = [".venv", "shared"]

[tool.bandit.assert_used]
# skips = ['*_test.py', '*test_*.py', '*unittest.py']

[tool.darglint]
docstring_style = 'google'  # Default. Alternatives are 'sphinx' and 'numpy'.
strictness = 'full'  # Default. Alternatives are 'short' and 'long'.

[tool.docformatter]
recursive = true
wrap-descriptions = 120
wrap-summaries = 120

[tool.mypy]
python_version = "3.10"

check_untyped_defs = true
disallow_any_decorated = false
disallow_any_explicit = false
# disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
# disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
# pretty = true
# show_column_numbers = true
# show_error_codes = true
# show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

# linecoverage_report = "coverage_mypy-json"
# linecount_report = "coverage_mypy-txt"
html_report = "releases/tests/mypy_html"
# any_exprs_report = "coverage_mypy_any-txt"

[tool.ruff]
line-length = 99
src = ["project_name"]
include = ["pyproject.toml", "project_name/**/*.py"]
builtins = ["_"]

# Avoiding flagging (and removing) `V101` from any `# noqa`
# directives, despite Ruff's lack of support for `vulture`.
external = ["V101"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# target-version = "py38"

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project_name"]
force-sort-within-sections = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 88  # Black.

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add command line options to pytest.
# doctest-modules: run doctests from docstrings in all python modules.
# durations: print duration of slowest tests.
# n auto: Use all CPUs for parallel processing.
# profile: generate code profile via pytest_profiling plugin.
# verbose: increase verbosity.
addopts = "--doctest-modules --durations=0 --durations-min=1.0 -n auto --profile --verbose"
# Enable log display during test run.
log_cli = true
# testpaths = []

[tool.setuptools]
packages = ["project_1"]

[tool.sqlfluff.core]
# dialect = "mysql"

[tool.sqlfluff.rules]
comma_style = "leading"
# tab_space_size = 2

[tool.sqlfluff.rules.L010]
# capitalisation_policy = lower

[tool.sqlfluff.rules.L052]
# Semi-colon formatting approach
multiline_newline = true
require_final_semicolon = true

[tool.uv.sources]
# ftod-ds-utils = { path = "../../../ftod-ds-utils", editable = true }
ds-utils = { path = "../ds-utils", editable = true }
project-1 = { workspace = true }
